# aptible_geodata

./: .gitignore  Makefile  pyproject.toml  readme.md  setup.cfg
data/: locations.py  utils.py
notebooks/: 1-base-centroid.ipynb  2-population-weighted-centroid.ipynb  3-navigation-time-traversal-centroid.ipynb  4-navigation-time-traversal-centroid-precise.ipynb
outputs/: 1-base-centroid.html  2-population-weighted-centroid.html
