[metadata]
name = aptible_geocenter
version = 0.0.1
description = My package description
long_description = file: README.md
license = All Rights Reserved

[options]
packages = find:
install_requires =
  geojson
  keplergl
  jupyterlab
  jupyterthemes
  reverse-geocode

[options.extras_require]
dev =
  black[jupyter]
  isort
  pytest
  pytest-cov
