[metadata]
name = aptible_geodata
version = 0.0.1
description = My package description
long_description = file: README.md
license = All Rights Reserved

[options]
packages = find:
install_requires =
  geog @ git+https://github.com/madhuravius/geog.git@t3kpunk-patch-1
  geojson
  geopandas
  keplergl
  ipywidgets
  jupyterlab
  jupyterthemes
  nbconvert[webpdf]
  numpy
  osmnx
  pandas
  requests
  reverse-geocode
  rtree
  scikit-learn
  shapely

[options.extras_require]
dev =
  black[jupyter]
  isort
  pytest
  pytest-cov
